--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ astroid==2.3.3
 Click==7.0
 colorama==0.4.3
 Flask==1.1.1
+Flask-Session==0.3.1
+Flask-WTF==0.14.3
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.1
@@ -14,3 +16,4 @@ six==1.14.0
 typed-ast==1.4.1
 Werkzeug==0.16.1
 wrapt==1.11.2
+WTForms==2.2.1
